# kc2

./: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  python-app.yml
kc2/: app.py  cloud_init.py  simplestreams.py
templates/: base.html  list.html  new.html
