[tool.poetry]
name = "kc2"
version = "0.4.0"
description = "Koken Compute Cloud"
authors = ["otariidae <otariidae@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pylxd = "^2.2.11"
fastapi = "^0.65.2"
Jinja2 = "^2.11.2"
uvicorn = "^0.13.1"
python-multipart = "^0.0.5"
requests = "^2.25.0"
aiofiles = "^0.6.0"
simplesimplestreams = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.910"
types-requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
